service-mesh/bookinfo/07_egressgateway/03_worldclockapi-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: worldclockapi
  namespace: bookinfo
  labels: 
    example: worldclockapi
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: worldclockapi
